Fixed header spacing

--- a/app/styles/_mir-header.scss
+++ b/app/styles/_mir-header.scss
@@ -14,10 +14,9 @@
 
 .mir-Header-Items {
   margin: 0;
-  padding: 1em 1em 1em 3.25em;
+  padding: 1em;
 }
 
 .mir-Header-Item { display: inline; }
-
 
 .mir-Header-Title { margin-top: 1.75em; }
